INDIGO-74, INDIGO-129 more style fixes and changed z-index for modal error.

--- a/war/src/main/webapp/engines/jahia-anthracite/_components.scss
+++ b/war/src/main/webapp/engines/jahia-anthracite/_components.scss
@@ -4228,13 +4228,13 @@ body[data-indigo-gwt-side-panel="open"] {
 	}
 
 	.x-info-bl.x-info-nofooter {
-		background: #455A64;
+		background: $COLOUR--GREY_CLOUDS;
 
 		.x-info-br {
-			background: #455A64;
+			background: $COLOUR--GREY_CLOUDS;
 
 			.x-info-bc {
-				background: #455A64;
+				background: $COLOUR--GREY_CLOUDS;
 			}
 
 		}
